# CPP-Word-Copy

./: CMakeLists.txt  CPPWord.pro  README.md  build.sh  icons.qrc
src/: documentmanager.cpp  documentmanager.h  formatbar.cpp  formatbar.h  main.cpp  mainwindow.cpp  mainwindow.h  texteditor.cpp  texteditor.h
